--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -4338,6 +4338,10 @@ body.okayNav-loaded {
     margin-right: 10px;
   }
 
+  .title-line {
+    margin-top: 9px;
+  }
+
   .second-title {
     padding-bottom: 9px;
     font-size: 24px;
